added mountian class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <em><h1>I'm Roger.</h1></em>
       <h2>A full-time learner.</h2>
       <img src="Media/cloud.png" class="cloud2" alt="cloud.img">
-      <img src="Media/mountain.png" alt="mountain.img">
+      <img class ="mountain" src="Media/mountain.png" alt="mountain.img">
     </div>
 
 
